Added last projects

--- a/projects.html
+++ b/projects.html
@@ -35,12 +35,89 @@
         <div class="project-descr">
           <div class="project-descr-text">
             <div class="header-container">
-              <h2>Currently learning Vulkan</h2>
+              <h1>SoftBody CUDA simulation</h1>
+              <h6>Dec. 2024 | C++ (School Project)</h6>
             </div>
+            <p>This project goal was to simulate a Softbody with CUDA. It is based on a spring-mass model.</p>
           </div>
 
+          <section class="slider-wrapper">
+            <button class="slide-arrow slide-arrow-prev">
+              &#8249;
+            </button>
+            <button class="slide-arrow slide-arrow-next">
+              &#8250;
+            </button>
+            <div class="slides-container">
+
+              <div class="slide"><img src="misc/Softbody/Peek%202024-09-27%2002-40.gif" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Softbody/Peek%202024-09-27%2002-46.gif" alt="anim images"/></div>
+
+            </div>
+          </section>
         </div>
       </div>
+
+      <div class="project" state="unfocused">
+        <div class="project-descr">
+          <div class="project-descr-text">
+            <div class="header-container">
+              <h1>Raytracing II</h1>
+              <h6>Dec. 2024 | C++ (School Project)</h6>
+            </div>
+            <p>I made a raytracer in opengl. It builds a BVH for any mesh (this bit of code was given by the teacher, I've done pretty everything else). A shader then accumulates each frame in order to yield better results.</p>
+            <p>It supports shadows, reflections, transparency, env maps, and uses Cook-Torrance specular reflectance model with microfacet distributions and GGX distribution.</p>
+            <p>The following results were generated in a few seconds at most.
+          </div>
+
+          <section class="slider-wrapper">
+            <button class="slide-arrow slide-arrow-prev">
+              &#8249;
+            </button>
+            <button class="slide-arrow slide-arrow-next">
+              &#8250;
+            </button>
+            <div class="slides-container">
+
+              <div class="slide"><img src="misc/Raytracing/oui.gif" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Raytracing/Screenshot%20from%202024-09-27%2001-40-23.png" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Raytracing/Screenshot%20from%202024-09-27%2001-41-24.png" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Raytracing/Screenshot%20from%202024-09-27%2001-45-32.png" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Raytracing/Screenshot%20from%202024-09-27%2001-46-51.png" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Raytracing/Peek%202024-09-27%2001-39.gif" alt="anim images"/></div>
+
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <div class="project" state="unfocused">
+        <div class="project-descr">
+          <div class="project-descr-text">
+            <div class="header-container">
+              <h1>Skeleton Animation and skinning</h1>
+              <h6>Dec. 2024 | C++ (School Project)</h6>
+            </div>
+            <p>I made a program that parses BVH file, compute skeleton position and apply skinning algorithm </p>
+          </div>
+          <section class="slider-wrapper">
+            <button class="slide-arrow slide-arrow-prev">
+              &#8249;
+            </button>
+            <button class="slide-arrow slide-arrow-next">
+              &#8250;
+            </button>
+            <div class="slides-container">
+
+              <div class="slide"><img src="misc/Anim/Peek%202024-09-26%2023-42.gif" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Anim/Peek%202024-09-26%2023-43.gif" alt="anim images"/></div>
+              <div class="slide"><img src="misc/Anim/ouioui.gif" alt="anim images"/></div>
+
+            </div>
+          </section>
+        </div>
+      </div>
+
 
       <div class="project" state="unfocused">
         <div class="project-descr">
@@ -229,7 +306,7 @@
         <div class="project-descr">
           <div class="project-descr-text">
             <div class="header-container">
-              <h1>Rustracer</h1>
+              <h1>Raytracer in rust</h1>
               <h6>Aug. 2022 | Rust</h6>
             </div>
             <p>A basic raytracer implementation(on CPU) I've worked on in order to learn Rust following Raytracing in one weekend series.</p>
