--- a/about.html
+++ b/about.html
@@ -64,11 +64,13 @@ I’m a French student studying math and informatics. I have always liked math, 
 
         <p>
 Ever since I have been exploring this vast domain and many of the techniques employed in it. I’ve had a lot of fun with many personal projects. I am also interested in physics simulation and the fascinating results it is able to yield.
-        </p>
+        I am eager to find new challenging problems to solve as well while having a meaningfull purpose to my work.</p>
 
         <p>
 Aside from that, I started climbing when I was 10 years old (in Marseille’s calanques). I have continued since and have even participated in a few climbing contests.
         </p>
+        
+        
 
 
       </div>
