--- a/noel.html
+++ b/noel.html
@@ -31,6 +31,6 @@
     </style>
 </head>
 <body>
-    <img src="landscape.jpg" alt="Landscape image">
+    <img src="landscape.jpeg" alt="Landscape image">
 </body>
 </html>
